# bionic_reading_discord_bot

./: .env.dist  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  deploy.yml  test.yml
src/: config.rs  logger.rs  main.rs
src/commands/: convert.rs
