[package]
name = "bionic_reading_discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bionic_reading_api = { path = "../bionic_reading_api" }
poise = "0.5.5"
tokio = { version = "1", features = ["full"] }
